CHORE: Clouds animations

--- a/index.html
+++ b/index.html
@@ -8,13 +8,19 @@
   <link rel="stylesheet" href="./css/main.css">
 </head>
 <body>
-  <h1>Title</h1>
+
   <div class="container">
-    <p class="text-1">Something</p>
-    <p class="text-2">Something</p>
-    <p class="text-3">Something</p>
-    <p class="text-4">Something</p>
-    <p class="text-5">Something</p>
+    <div class="bg"></div>
+    <div class="head">
+      <div class="eye left">
+        <div class="cutout"></div>
+      </div>
+      <div class="eye right">
+        <div class="cutout"></div>
+      </div>
+      <div class="mouth"></div>
+    </div>
+    <div class="body"></div>
   </div>
 </body>
 </html>
